methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:18: error: identifier expected but ')' found.
def line2(c1:COLOR, c2:COLOR,){
                             ^FlowerCase:56: error: ':' expected but '}' found.
}
^